# Vienna

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_GUIDE.md  Dockerfile  README.md  docker-compose.yml  docker-nuke.sh  docker-start.sh  issues.md  pyproject.toml  requirements.txt
dcoumentations/: ALGORITHMS.md  COST_AND_HEURISTICS.md  COST_AND_HEURISTICS.tex  HEURISTICS_DOCUMENTATION.tex  HEURISTICS_FORMULA.tex  VIENNA_COMPLETE_NOTES.tex  dataflow.tex
public/: index.html
public/css/: style.css
public/fonts/: fonts.css  fonts_local.css
public/js/: api.js  app.js  explainer.js  map.js  overlays.js  presets.js  results.js  sidebar.js
scripts/: fetch_osm_data.py
src/: __init__.py  main.py
src/algorithms/: __init__.py  astar.py  base.py  bfs.py  bidirectional_astar.py  dfs.py  dijkstra.py  greedy_best_first.py  runner.py  ucs.py  weighted_astar.py
src/graph/: __init__.py  builder.py  loader.py  osm_fetcher.py
src/heuristics/: __init__.py  combined.py  commuter_bridges.py  delivery.py  elevation.py  emission_zones.py  events.py  fiaker.py  headway.py  heuriger.py  holiday_historical.py  humidity.py  intersection_density.py  lane_capacity.py  manual_adjustment.py  markets.py  nightnetwork.py  parking.py  pedestrian_density.py  road_quality.py  road_works.py  safety.py  scenic.py  school_zones.py  season.py  snow_priority.py  speed_preference.py  surface.py  time_of_day.py  tram_tracks.py  vehicle_type.py  vehicle_type_routing.py  visibility.py  weather.py  wind.py
src/routes/: api.py
